fixed hidden a not collapsing

--- a/css/style.css
+++ b/css/style.css
@@ -580,6 +580,7 @@ body {
   z-index: 1500;
   opacity: 0;
   width: 0;
+  visibility: hidden;
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
 
 .navigation__list {
@@ -619,7 +620,8 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
-  width: 100%; }
+  width: 100%;
+  visibility: visible; }
 
 .navigation__icon {
   position: relative;
