--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -40,6 +40,7 @@
 
         opacity: 0;
         width: 0;
+        visibility: hidden; 
         transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
 
@@ -67,7 +68,7 @@
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
             background-size: 230%;
             transition: all .4s;
-
+            
             span {
                 display: inline-block;
                 margin-right: 1.5rem;
@@ -90,6 +91,7 @@
     &__checkbox:checked ~ &__nav {
             opacity: 1;
             width: 100%;
+            visibility: visible;
     }
 
     //ICON
